--- a/style.css
+++ b/style.css
@@ -40,10 +40,12 @@ a:hover {
 
 .header{
     background-image: url("header.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% auto;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    height: 59vh;
+    height: 350px;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -60,6 +62,10 @@ a:hover {
 }
 
 #Data{
+    display: flex;
+}
+
+#Predict{
     display: flex;
 }
 
@@ -93,6 +99,7 @@ a:hover {
     background-color: #f3f3f3;
     border: 1px solid #dddddd;
     text-align: center;
+    font-family: Helvetica;
 }
 
 /* .styled tr:nth-of-type(even) {
@@ -102,6 +109,29 @@ a:hover {
 .styled tr:hover {
     background-color: #f1f1f1;
 } */
+
+.styled2 {
+    width: 100%;
+    border-collapse: collapse;
+    font-size: 18px;
+    text-align: left;
+    height: 100%;
+    font-family: 'Franklin Gothic Medium';
+}
+
+.styled2 th{
+    padding: 12px 40px;
+    border: 1px solid #dddddd;
+    background-color: #3498db;
+    color: #ffffff;
+}
+
+.styled2 td{
+    background-color: #f3f3f3;
+    border: 1px solid #dddddd;
+    text-align: center;
+    font-family: Helvetica;
+}
 
 #map{
     width: 65%;
